--- a/.github/workflows/covid-scrape.yml
+++ b/.github/workflows/covid-scrape.yml
@@ -13,7 +13,7 @@ jobs:
       MONGO_CLOUD_DB: ${{ secrets.MONGO_CLOUD_DB }}
     steps:
       - uses: actions/checkout@v2
-      - uses: r-lib/actions/setup-r@master
+      - uses: r-lib/actions/setup-r@v2
       - name: Install mongolite package
         run: Rscript -e 'install.packages("mongolite", dependencies = TRUE)'
       - name: Install rvest package
