--- a/.github/workflows/covid-scrape.yml
+++ b/.github/workflows/covid-scrape.yml
@@ -2,17 +2,20 @@ name: Daily Scraping Covid
 
 on:
   schedule:
-    - cron: '5 * * * *'  # At 20:00 on day-of-month 25
+    - cron: '5 * * * *'  # every 5 minutes
+  workflow_dispatch:
 
 jobs:
   covid-scrape:
-    runs-on: macOS-latest
+    runs-on: macos-latest
     env:
       ATLAS_URL: ${{ secrets.ATLAS_URL }}
       ATLAS_COLLECTION: ${{ secrets.ATLAS_COLLECTION }}
       ATLAS_DB: ${{ secrets.ATLAS_DB }}
     steps:
-      - uses: actions/checkout@v2
+      - name: Start time
+        run: echo "$(date) ** $(TZ=Asia/Jakarta date)"
+      - uses: actions/checkout@v3
       - uses: r-lib/actions/setup-r@v2
       - name: Install mongolite package
         run: Rscript -e 'install.packages("mongolite", dependencies = TRUE)'
